fix overflow gallery home

--- a/gourmandises/src/app/main/gallery-home/gallery-home.component.css
+++ b/gourmandises/src/app/main/gallery-home/gallery-home.component.css
@@ -1,6 +1,7 @@
 #cakes-randomgallery {
   padding: 3em 0;
   clear: both;
+  overflow-x: hidden;
 }
 
 .row {
